[package]
name = "land2port"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1" }
argh = "0.1.13"
# Upstream usls, pinned. Device features (coreml/cuda/tensorrt) are added
# per-platform below so macOS doesn't pull the CUDA/TensorRT ORT providers.
usls = { git = "https://github.com/jamjamjon/usls", rev = "67a07a0f85c69b16acdbc9ae76388d5ff2c3b7b3", features = ["video", "viewer"] }
image = "0.25"
image-compare = "0.4.2"
openai-api-rs = "6.0.6"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.41"
ndarray = "0.16.1"
slsl = { version = "0.0.5", features = ["rayon"] }
# Used directly to encode the cropped output video to a deterministic path
# (the new usls Viewer auto-generates output paths and offers no save-path API).
video-rs = { version = "0.11.0", features = ["ndarray"] }

[target.'cfg(target_os = "macos")'.dependencies]
usls = { git = "https://github.com/jamjamjon/usls", rev = "67a07a0f85c69b16acdbc9ae76388d5ff2c3b7b3", features = ["coreml"] }

[target.'cfg(target_os = "linux")'.dependencies]
usls = { git = "https://github.com/jamjamjon/usls", rev = "67a07a0f85c69b16acdbc9ae76388d5ff2c3b7b3", features = ["cuda", "tensorrt"] }
